# add_dll_directory

./: .gitignore  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.cfg  setup.py  tox.ini
dll/: CMakeLists.txt  lib.cpp  lib.h
dll/sub/: __init__.py  _sub.cpp
tests/: test_sub.py
